feat: 调整common模块依赖

--- a/pom.xml
+++ b/pom.xml
@@ -90,5 +90,10 @@
 
     <!--  这里的依赖会被子模块继承  -->
     <dependencies>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 </project>
