--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
         <module>mall-product</module>
         <module>mall-ware</module>
         <module>mall-common</module>
+        <module>mall-gateway</module>
     </modules>
     <name>guli-mall</name>
     <description>parent</description>
