--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
         <module>mall-common</module>
         <module>mall-gateway</module>
         <module>renren-fast</module>
+        <module>mall-third-party</module>
     </modules>
     <name>guli-mall</name>
     <description>parent</description>
