--- a/mall-order/src/main/resources/application.yml
+++ b/mall-order/src/main/resources/application.yml
@@ -5,8 +5,17 @@ spring:
   datasource:
     username: root
     password: root
-    url: jdbc:mysql://192.168.163.131:3306/gulimall_oms
-    driver-class-name: com.mysql.jdbc.Driver
+    url: jdbc:mysql://192.168.163.131:3306/mall_oms
+    driver-class-name: com.mysql.cj.jdbc.Driver
+  cloud:
+    nacos:
+      discovery:
+        server-addr: 192.168.163.131:8848
+  jackson:
+    date-format: yyyy-MM-dd HH:mm:ss
+  application:
+    name: mall-order
+
 mybatis-plus:
   mapper-locations: classpath:/mapper/**/*.xml
   global-config:
