feat: 简单联调通过优惠券服务模块

--- a/mall-coupon/src/main/resources/application.yaml
+++ b/mall-coupon/src/main/resources/application.yaml
@@ -18,3 +18,9 @@ mybatis-plus:
       id-type: auto
 server:
   port: 7000
+
+# 优先读取bootstrap.yaml中配置中心的配置
+coupon:
+  user:
+    name: zhangsan
+    age: 12
