--- a/mall-gateway/src/main/resources/application.yaml
+++ b/mall-gateway/src/main/resources/application.yaml
@@ -27,6 +27,13 @@ spring:
           filters:
             - RewritePath=/api/(?<segment>.*),/$\{segment}
 
+        - id: coupon_route
+          uri: lb://mall-coupon
+          predicates:
+            - Path=/api/coupon/**
+          filters:
+            - RewritePath=/api/(?<segment>.*),/$\{segment}
+
         - id: third_party_route
           uri: lb://mall-third-party
           predicates:
