feat: 简单联调通过仓储服务模块

--- a/mall-gateway/src/main/resources/application.yaml
+++ b/mall-gateway/src/main/resources/application.yaml
@@ -41,6 +41,13 @@ spring:
           filters:
             - RewritePath=/api/(?<segment>.*),/$\{segment}
 
+        - id: ware_route
+          uri: lb://mall-ware
+          predicates:
+            - Path=/api/ware/**
+          filters:
+            - RewritePath=/api/(?<segment>.*),/$\{segment}
+
         - id: third_party_route
           uri: lb://mall-third-party
           predicates:
