--- a/mall-ware/src/main/resources/application.yml
+++ b/mall-ware/src/main/resources/application.yml
@@ -5,19 +5,16 @@ spring:
   datasource:
     username: root
     password: root
-    url: jdbc:mysql://192.168.163.131:3306/gulimall_wms
-    driver-class-name: com.mysql.jdbc.Driver
-
+    url: jdbc:mysql://192.168.163.131:3306/mall_wms
+    driver-class-name: com.mysql.cj.jdbc.Driver
   cloud:
     nacos:
       discovery:
         server-addr: 192.168.163.131:8848
   application:
-    name: gulimall-ware
-
+    name: mall-ware
   jackson:
     date-format: yyyy-MM-dd HH:mm:ss
-
 
 mybatis-plus:
   mapper-locations: classpath:/mapper/**/*.xml
