feat: nginx 代理到网关实现负载均衡请求首页

--- a/mall-gateway/src/main/resources/application.yaml
+++ b/mall-gateway/src/main/resources/application.yaml
@@ -61,6 +61,12 @@ spring:
             - Path=/api/**
           filters:
             - RewritePath=/api/(?<segment>.*),/renren-fast/$\{segment}
+
+        - id: gulimall_host_route
+          uri: lb://mall-product
+          predicates:
+            - Host=**.gulimall.com
+
       ## http://localhost:88/api/captcha.jpg   http://localhost:8080/renren-fast/captcha.jpg
       ## http://localhost:88/api/product/category/list/tree http://localhost:10000/product/category/list/tree
 
