feat: redis - 分布式缓存

--- a/mall-product/src/main/resources/application.yaml
+++ b/mall-product/src/main/resources/application.yaml
@@ -14,6 +14,9 @@ spring:
     date-format: yyyy-MM-dd HH:mm:ss
   thymeleaf:
     cache: false
+  redis:
+    host: 192.168.163.131
+    port: 6379
 
 mybatis-plus:
   mapper-locations: classpath:/mapper/**/*.xml
