--- a/mall-product/pom.xml
+++ b/mall-product/pom.xml
@@ -48,6 +48,10 @@
             <artifactId>redisson</artifactId>
             <version>3.11.1</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-cache</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
