feat: 认证服务-短信验证码

--- a/mall-auth-server/pom.xml
+++ b/mall-auth-server/pom.xml
@@ -32,6 +32,11 @@
             <scope>runtime</scope>
             <optional>true</optional>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-redis</artifactId>
+        </dependency>
+
     </dependencies>
 
     <build>
