--- a/mall-auth-server/src/main/resources/application.yaml
+++ b/mall-auth-server/src/main/resources/application.yaml
@@ -7,6 +7,9 @@ spring:
         server-addr: 192.168.163.131:8848
   thymeleaf:
     cache: false
+  redis:
+    port: 6379
+    host: 192.168.163.131
 
 server:
   port: 20000
