--- a/mall-common/pom.xml
+++ b/mall-common/pom.xml
@@ -26,8 +26,17 @@
             <artifactId>httpcore</artifactId>
         </dependency>
         <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpclient</artifactId>
+        </dependency>
+        <dependency>
             <groupId>commons-lang</groupId>
             <artifactId>commons-lang</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.eclipse.jetty</groupId>
+            <artifactId>jetty-util</artifactId>
+<!--            <version>9.3.7.v20160115</version>-->
         </dependency>
 
         <dependency>
