--- a/mall-third-party/src/main/resources/application.yaml
+++ b/mall-third-party/src/main/resources/application.yaml
@@ -3,7 +3,13 @@ spring:
     nacos:
       discovery:
         server-addr: 192.168.163.131:8848
-#    alicloud:
+    alicloud:
+      sms:
+        host: https://fesms.market.alicloudapi.com
+        path: /sms/
+        skin: 1
+        sign: 175622
+        appcode: b0563c23aff8428c97a54d4f7f9e28e5
 #      access-key: LTAI4FwvfjSycd1APnuG9bjj
 #      secret-key: O6xaxyiWfSIitcOkSuK27ju4hXT5Hl
 #      oss:
