--- a/mall-member/pom.xml
+++ b/mall-member/pom.xml
@@ -18,6 +18,11 @@
             <groupId>com.zsy</groupId>
             <artifactId>mall-common</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.8.6</version>
+        </dependency>
     </dependencies>
 
     <build>
