--- a/mall-cart/pom.xml
+++ b/mall-cart/pom.xml
@@ -13,6 +13,7 @@
     <description>购物车模块</description>
     <properties>
         <java.version>1.8</java.version>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
     <dependencies>
         <dependency>
