--- a/mall-order/pom.xml
+++ b/mall-order/pom.xml
@@ -7,11 +7,14 @@
         <artifactId>guli-mall</artifactId>
         <version>0.0.1-SNAPSHOT</version>
     </parent>
-    <groupId>com.zsy</groupId>
     <artifactId>mall-order</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>mall-order</name>
     <description>订单服务</description>
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    </properties>
+
 
     <dependencies>
         <dependency>
@@ -25,6 +28,11 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+                <version>2.2.2.RELEASE</version>
+                <configuration>
+                    <fork>true</fork>
+                    <addResources>true</addResources>
+                </configuration>
             </plugin>
         </plugins>
     </build>
