--- a/renren-fast/pom.xml
+++ b/renren-fast/pom.xml
@@ -245,6 +245,7 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+				<version>2.2.2.RELEASE</version>
 				<configuration>
 					<fork>true</fork>
 				</configuration>
@@ -253,6 +254,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
+				<version>2.16</version>
 				<configuration>
 					<skipTests>true</skipTests>
 				</configuration>
