--- a/mall-search/src/main/resources/application.yaml
+++ b/mall-search/src/main/resources/application.yaml
@@ -4,12 +4,12 @@ spring:
   cloud:
     nacos:
       discovery:
-        server-addr: 192.168.163.131:8848
+        server-addr: 192.168.45.64:8849
   thymeleaf:
     cache: false
   redis:
     port: 6379
-    host: 192.168.163.131
+    host: localhost
   session:
     store-type: redis
 server:
